<?xml version="1.0" encoding="utf-8"?>
<!--
    Author: Erik Cox
    Date  : 11/04/14
    Homework Assignment: US State Capital Game
    File Name: strings.xml
    Objective: This is a quiz game for U.S. state capitals.
    This is where the text strings are stored.
-->

<resources>

    <string name="app_name">State Capitals</string>
    <string name="game_title_text">State Capital Game</string>
    <string name="enter_name_text">Please enter your name:</string>
    <string name="top_scores">Top Scores</string>
    <string name="start_button_text">New Game</string>
    <string name="submit_button_text">Submit Answers</string>
    <string name="home_button_text">Home</string>
    <string name="score_button_text">Scores</string>
    <string name="quit_button_text">Quit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_top_scores">TopScores</string>


</resources>
