<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".Splash">

    <TextView
        android:text="@string/game_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_title"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        android:layout_row="0"
        android:layout_column="0"/>

    <Space
        android:layout_width="20px"
        android:layout_height="50px"
        android:layout_row="1"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name_text"
        android:id="@+id/enter_name"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="20sp"/>

    <Space
        android:layout_width="20px"
        android:layout_height="30px"
        android:layout_row="3"
        android:layout_column="0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name"
        android:ems="10"
        android:id="@+id/userName"
        android:layout_row="4"
        android:layout_column="0"
        android:autoText="false"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:id="@+id/startGameButton"
        android:layout_row="14"
        android:layout_column="0"
        android:textColor="@android:color/holo_green_light"
        android:onClick="startGame"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_button_text"
        android:id="@+id/scoreButton"
        android:layout_row="14"
        android:layout_column="1"
        android:onClick="viewScore"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_button_text"
        android:id="@+id/quitButton"
        android:layout_row="15"
        android:layout_column="0"
        android:textColor="@android:color/holo_red_light"
        android:onClick="quitGame"/>

</GridLayout>
