<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".Splash">

    <TextView
        android:text="@string/game_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_title"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        android:layout_row="0"
        android:layout_column="0"/>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="State 1:"
    android:id="@+id/state1"
    android:layout_row="1"
    android:layout_column="0"
    android:textSize="20sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Capital"
        android:ems="10"
        android:id="@+id/capital1"
        android:layout_row="2"
        android:layout_column="0"
        android:autoText="false"/>

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_row="3"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="State 2:"
        android:id="@+id/state2"
        android:layout_row="4"
        android:layout_column="0"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Captial"
        android:ems="10"
        android:id="@+id/capital2"
        android:layout_row="5"
        android:layout_column="0"
        android:autoText="false"/>

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_row="6"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="State 3:"
        android:id="@+id/state3"
        android:layout_row="7"
        android:layout_column="0"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Captial"
        android:ems="10"
        android:id="@+id/capital3"
        android:layout_row="8"
        android:layout_column="0"
        android:autoText="false"/>

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_row="9"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="State 4:"
        android:id="@+id/state4"
        android:layout_row="10"
        android:layout_column="0"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Captial"
        android:ems="10"
        android:id="@+id/capital4"
        android:layout_row="11"
        android:layout_column="0"
        android:autoText="false"/>

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_row="12"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="State 5:"
        android:id="@+id/state5"
        android:layout_row="13"
        android:layout_column="0"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Captial"
        android:ems="10"
        android:id="@+id/capital5"
        android:layout_row="14"
        android:layout_column="0"
        android:autoText="false"/>

    <Space
        android:layout_width="20px"
        android:layout_height="100px"
        android:layout_row="15"
        android:layout_column="0"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_text"
        android:id="@+id/submitGameButton"
        android:layout_row="16"
        android:layout_column="0"
        android:textColor="@android:color/holo_green_light"
        android:onClick="submitGame"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_button_text"
        android:id="@+id/scoreButton"
        android:layout_row="16"
        android:layout_column="1"
        android:onClick="viewScore"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_button_text"
        android:id="@+id/quitButton"
        android:layout_row="17"
        android:layout_column="1"
        android:textColor="@android:color/holo_red_light"
        android:onClick="quitGame"/>

</GridLayout>
