<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".Splash">

    <TextView
        android:text="@string/top_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scores_title"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        android:layout_row="0"
        android:layout_column="0"/>

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_row="1"
        android:layout_column="0"/>

    <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="none"
    android:ems="5"
    android:id="@+id/score_name_1"
    android:layout_row="2"
    android:layout_column="0"
    android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_score_1"
        android:layout_row="2"
        android:layout_column="1"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_name_2"
        android:layout_row="3"
        android:layout_column="0"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_score_2"
        android:layout_row="3"
        android:layout_column="1"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_name_3"
        android:layout_row="4"
        android:layout_column="0"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_score_3"
        android:layout_row="4"
        android:layout_column="1"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_name_4"
        android:layout_row="5"
        android:layout_column="0"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_score_4"
        android:layout_row="5"
        android:layout_column="1"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_name_5"
        android:layout_row="6"
        android:layout_column="0"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_score_5"
        android:layout_row="6"
        android:layout_column="1"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_name_6"
        android:layout_row="7"
        android:layout_column="0"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_score_6"
        android:layout_row="7"
        android:layout_column="1"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_name_7"
        android:layout_row="8"
        android:layout_column="0"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_score_7"
        android:layout_row="8"
        android:layout_column="1"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_name_8"
        android:layout_row="9"
        android:layout_column="0"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_score_8"
        android:layout_row="9"
        android:layout_column="1"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_name_9"
        android:layout_row="10"
        android:layout_column="0"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_score_9"
        android:layout_row="10"
        android:layout_column="1"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/score_name_10"
        android:layout_row="11"
        android:layout_column="0"
        android:autoText="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="5"
        android:id="@+id/scorescore_10"
        android:layout_row="11"
        android:layout_column="1"
        android:autoText="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:id="@+id/startGameButton"
        android:layout_row="13"
        android:layout_column="0"
        android:textColor="@android:color/holo_green_light"
        android:onClick="startGame"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_text"
        android:id="@+id/homeButton"
        android:layout_row="13"
        android:layout_column="1"
        android:onClick="homeScreen"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_button_text"
        android:id="@+id/quitButton"
        android:layout_row="13"
        android:layout_column="2"
        android:textColor="@android:color/holo_red_light"
        android:onClick="quitGame"/>

</GridLayout>
